fixed z-index constant

--- a/src/components/molecules/LoadingPage/LoadingPage.scss
+++ b/src/components/molecules/LoadingPage/LoadingPage.scss
@@ -10,6 +10,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  z-index: z(loading-page); //to put LoadingPage on top when loading
 
   &__wrapper {
     position: relative;
