--- a/src/components/organisms/HelpCenter/HelpCenter.scss
+++ b/src/components/organisms/HelpCenter/HelpCenter.scss
@@ -1,5 +1,8 @@
+@import "scss/constants.scss";
+
 $help-back-button-pos--top: 90px;
 $help-back-button-pos--left: 25px;
+$help-back-button-max-width: 100px;
 
 .HelpCenter {
   &__iframeContainer {
@@ -12,6 +15,7 @@ $help-back-button-pos--left: 25px;
     position: absolute;
     top: $help-back-button-pos--top;
     left: $help-back-button-pos--left;
+    max-width: $help-back-button-max-width;
   }
 
   &__iframe {
